--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -402,6 +402,22 @@
                         <p><small>Autopedido</small> </p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link collapsed text-truncate" href="#submenuadmusuarios" data-toggle="collapse"
+                        [routerLink]="['/devolucionautopedido']" style="color:white" >
+                        <!-- *ngIf="modelopermisos.btndepachocostoservi" -->
+                        <i class="fas fa-angle-right mr-1"></i>
+                        <p><small>Dev.Autopedido</small> </p>
+                    </a>
+                </li>
+
+                <li class="nav-item" hidden>
+                    <a class="nav-link collapsed text-truncate" href="#submenuadmusuarios" data-toggle="collapse"
+                        [routerLink]="['/busquedacuentas']" style="color:white" >
+                        <i class="fas fa-angle-right mr-1"></i>
+                        <p><small>Búsq.Cuentas</small> </p>
+                    </a>
+                </li>
 
                 <li class="nav-item">
                     <a class="nav-link collapsed text-truncate" href="#submenuadmusuarios" data-toggle="collapse"
