--- a/src/app/views/versiones/versiones.component.html
+++ b/src/app/views/versiones/versiones.component.html
@@ -15,7 +15,7 @@
             <div class="card border-primary" style="padding: 5px;">
                 <div class="form-row text-center">
                     <div class="form-group col-md-4">
-                        <label for="numversioninf">Versión Servicios Rest *</label>
+                        <label for="numversioninf">Versión Servicios Rest ***</label>
                         <input type="text" class="form-control form-control" formControlName="numversioninf">
                     </div>
                     <!-- <div class="form-group col-md-4">
@@ -23,7 +23,7 @@
                         <input type="text" class="form-control form-control" formControlName="numversionserv">
                     </div> -->
                     <div class="form-group col-md-4">
-                        <label for="numversionapp">Versión Aplicación (*) *</label>
+                        <label for="numversionapp">Versión Aplicación ***</label>
                         <input type="text" class="form-control form-control" formControlName="numversionapp">
                     </div>
                 </div>
