--- a/src/app/views/despacho-recetas-ambulatoria/despacho-recetas-ambulatoria.component.html
+++ b/src/app/views/despacho-recetas-ambulatoria/despacho-recetas-ambulatoria.component.html
@@ -26,7 +26,7 @@
                         <input type="text" class="form-control form-control-sm" formControlName="numsolicitud">
                     </div>
                     <div class="form-group col-md-2">
-                        <label for="fechahora">Fecha  *</label>
+                        <label for="fechahora">Fecha *</label>
                         <input appSelecttext type="text" placeholder="DD/MM/YYYY" class="form-control form-control-sm"
                             [bsConfig]="bsConfig" bsDatepicker formControlName="fechahora" />
                     </div>
@@ -76,10 +76,11 @@
                     </div> -->
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-sm-1" >
+                    <div class="form-group col-sm-1">
                         <label for="numeroreceta">N° Receta *</label>
-                        <input type="text" appSelecttext appNumberonly class="form-control form-control-sm" maxlength="10"
-                            (blur)="BuscaReceta(FormDatosPaciente.value.numeroreceta)" formControlName="numeroreceta">
+                        <input type="text" appSelecttext appNumberonly class="form-control form-control-sm"
+                            maxlength="10" (blur)="BuscaReceta(FormDatosPaciente.value.numeroreceta)"
+                            formControlName="numeroreceta">
                     </div>
                     <div class="form-group col-sm-2">
                         <label for="numidentificacionmedico">N° Identificación Médico *</label>
@@ -110,7 +111,7 @@
                     <div class="form-group col-md-3">
                         <label for="bodcodigo">Bodega *</label>
                         <select name="bodcodigo" class='form-control form-control-sm'
-                            (change)="SeleccionaBodegaActivaBtnAgregar(FormDatosPaciente.value.bodcodigo)" 
+                            (change)="SeleccionaBodegaActivaBtnAgregar(FormDatosPaciente.value.bodcodigo)"
                             formControlName='bodcodigo'>
                             <option *ngFor='let listaBodegasSolictante of bodegasSolicitantes'
                                 [ngValue]='listaBodegasSolictante.bodcodigo'>
@@ -151,15 +152,15 @@
 
                     <div class="form-group col-sm-2" *ngIf="!ambito">
                         <label for="numeroboleta">Número Boleta *</label>
-                        <input type="text" appSelecttext appNumberonly class="form-control form-control-sm" maxlength="12"
-                            formControlName="numeroboleta">
+                        <input type="text" appSelecttext appNumberonly class="form-control form-control-sm"
+                            maxlength="12" formControlName="numeroboleta">
                     </div>
                     <div class="form-group col-sm-2" *ngIf="ambito">
-                            <label for="pieza">Pieza y Cama *</label>
-                            <input type="text" appSelecttext appNumberonly class="form-control form-control-sm" maxlength="12"
-                            formControlName="pieza">
+                        <label for="pieza">Pieza y Cama *</label>
+                        <input type="text" appSelecttext appNumberonly class="form-control form-control-sm"
+                            maxlength="12" formControlName="pieza">
                     </div>
-                    
+
 
                     <div class="form-group col-md-2 align-self-end">
                         <button type="button" id="btnevento" class="btn btn-primary btn-sm
@@ -175,7 +176,7 @@
         </form>
     </div>
     <div class="card border-primary mt-1" style="padding: 5px;">
-        <div class="table-editable mt-3" style="padding: 5px; height:1200px;">
+        <div class="table-editable mt-3" style="padding: 5px; height:1000px;">
             <tabset style="height: 320px;">
                 <tab heading="Medicamentos" id="tab1">
                     <div class="form-group col-md-2 align-self-end">
@@ -183,7 +184,7 @@
                             (click)="onBuscarProducto()">Agregar <i class="fas fa-plus ml-1"></i>
                         </button>
                     </div>
-                    <div class="table-responsive mt-3" style="padding: 5px; height:1020px;">
+                    <div class="table-responsive mt-3" style="padding: 5px; height:820px;">
                         <table id="tbldatosordendevolucion" class="table ml-1 table-condensed table-bordered ">
                             <thead class="table-primary  table-sm">
                                 <!-- da color de fondo a la columna-->
@@ -200,6 +201,8 @@
                                     <th>Dispensados</th>
                                     <th>Pendientes</th>
                                     <th>A Dispensar*</th>
+                                    <th>Lote </th>
+                                    <th>Vencimiento</th>
                                     <th>Eventos</th>
                                     <th>Eliminar</th>
                                 </tr>
@@ -283,6 +286,23 @@
                                         </small>
                                     </td>
                                     <td>
+                                        <select name="lote" class='form-control form-control-sm'
+                                            (change)="setLote($event.target.value, id)"  >
+                                            <option *ngFor="let detalleprod of detalle.detallelote"
+                                                [ngValue]='detalleprod'
+                                                value="{{ detalleprod.fechavto }}/{{ detalleprod.lote }}">
+                                                <small> {{ detalleprod.lote }} </small>
+                                            </option>
+                                        </select>
+                                    </td>
+                                    <td>
+                                        <small>
+                                        <input type="text" class="form-control form-control-sm text-right" value="{{ detalle.fechavto | date:'dd/MM/yyyy' }} "
+                                            disabled>
+                                        </small>
+                                    </td>
+                                        
+                                    <td>
                                         <small>
                                             <span><button type="button" id="btnVerEventos"
                                                     class="btn btn-info btn-rounded btn-sm ml-2"
@@ -304,7 +324,7 @@
                         </table>
                         <div class="row m-1">
                             <pagination [boundaryLinks]="true" [directionLinks]="true" [maxSize]="8"
-                                [totalItems]="arrdetalleSolicitudMed.length" [itemsPerPage]=50
+                                [totalItems]="arrdetalleSolicitudMed.length" [itemsPerPage]=20
                                 [previousText]="'Anterior'" [nextText]="'Siguiente'" [firstText]="'&laquo;'"
                                 [lastText]="'&raquo;'" (pageChanged)="pageChanged($event)">
                             </pagination>
@@ -380,7 +400,7 @@
             </tabset>
         </div>
     </div>
-   
+
     <!--  Botones de página -->
     <div class="row float-right mr-1 mt-2">
         <div class="form-group  align-self-end" *ngIf="modelopermisos.btngrabadespachorec">
