--- a/src/app/views/despachocostoservicio/despachocostoservicio.component.html
+++ b/src/app/views/despachocostoservicio/despachocostoservicio.component.html
@@ -53,8 +53,8 @@
 
 
         <div class="form-row mt-2">
-            <div class="form-group col-md-4">
-                <label for="bodcodigo">Bodega Solicitante  *</label>
+            <div class="form-group col-md-3">
+                <label for="bodcodigo">Bodega Solicitante *</label>
                 <select name="bodcodigo" class='form-control form-control-sm' formControlName='bodcodigo'
                 (change)="SeleccionaBodega(FormCreaSolicitud.value.bodcodigo)" >
                         <!-- -->
@@ -64,17 +64,17 @@
                 </option>
                 </select>
             </div>
-            <!-- <div class="form-group col-md-4">
-                <label for="codbodegasuministro">Bodega Suministro *</label>
-                <select name="codbodegasuministro" class='form-control form-control-sm'
-                formControlName='codbodegasuministro'>
-                <option *ngFor='let listaBodegassuministro of bodegassuministro'
-                    [ngValue]='listaBodegassuministro.bodcodigo'>
-                    {{ listaBodegassuministro.boddescripcion }}
+             <div class="form-group col-md-3">
+                <label for="bsservid">Servicio *</label>
+                <select name="bsservid" class='form-control form-control-sm'
+                formControlName='bsservid'>
+                <option *ngFor='let servicios of ListaEstructuraServicioBodegas'
+                    [ngValue]='servicios.bsservid'>
+                    {{ servicios.glosaservicio }}
                 </option>
                 </select>
-            </div> -->
-            <div class="form-group col-md-8  align-self-end text-right">
+            </div>
+            <div class="form-group col-md-6  align-self-end text-right">
                 <button type="button" id="btnevento" class="btn btn-primary btn-sm button-my-styles-busqueda_01"
                 [disabled]="!existesolicitud" (click)="eventosSolicitud()">Eventos
                 </button>
@@ -84,7 +84,7 @@
       </div>
     </form>
     
-    <div class="card border-primary" style="padding: 5px;margin-top: 10px;height: 1200px;">
+    <div class="card border-primary" style="padding: 5px;margin-top: 10px;height: 1000px;">
       <div id="table" class="table-editable">
           <!-- <button type="button" id="btnLimpiargrillamed" class="btn btn-danger text-right btn-sm ml-4 float-right"
           [disabled]="(tipobusqueda==='Solicitud'||tipobusqueda===null)?true:false" 
@@ -94,25 +94,17 @@
             <div class="form-row ">
                 <div class="form-group col-md-2">
                     <label for="codigoproducto">Código *</label>
-                    <input type="text" class="form-control form-control-sm"
+                    <input type="text" class="form-control form-control-sm" [disabled]="!ActivaBotonGrillaSolicitud()" 
                     (focusout)="getProducto($event.target.value)"
                     formControlName="codigoproducto" >
-                         <!--(blur)="codigo_ingresado(FormDespachoSolicitud.value.codigoproducto)" -->
                 </div>
-                <!-- <div class="form-group col-md-2">
-                    <label for="cantidad">Cantidad *</label>
-                    <input type="number" class="form-control form-control-sm" 
-                    
-                    formControlName="cantidad"> <!--(blur)="cantidad_ingresada(FormDespachoSolicitud.value.cantidad)"->
-                </div> -->
-                <!-- [disabled]="!FormDespachoSolicitud.valid" -->
                 <div class="form-group col-md-6 align-self-end">
                     <button type="button" 
                       class="btn btn-info btn-rounded col-md-3 btn-sm button-my-styles-busqueda_03 "
-                      [disabled]="desactivabtnagregar"
+                      [disabled]="!ActivaBotonGrillaSolicitud()" 
                       (click)="addArticuloGrilla()"> Agregar Producto<i class="fas fa-plus ml-1"></i>
                     </button>
-                    <button  type="button" id="btnPlantilla"  [disabled] ="activabtnplant"
+                    <button  type="button" id="btnPlantilla"  [disabled]="!ActivaBotonGrillaSolicitud()" 
                       class="btn btn-info col-md-3 btn-sm ml-4" (click)="onBuscarPlantillas()">Agregar Plantilla
                       <i class="fas fa-plus ml-1"></i>
                     </button>
@@ -120,7 +112,7 @@
                 
             </div>
         </form>
-        <div  class="table-responsive mt-2" style="height: 1040px;">
+        <div  class="table-responsive mt-2" style="height: 860px;">
           <table class="table table-sm table-condensed table-bordered  table-striped text-center">
             <tr class="table table-sm  table-primary table-bordered ">
               <th class="text-center">Código</th>
@@ -133,6 +125,8 @@
               <th class="text-center">Recepcionado</th>
               <th class="text-center">Devolución</th>
               <th class="text-center">Nombre Plantilla</th>
+              <th class="text-center">Lote</th>
+              <th class="text-center">Fecha Vto</th>
               <th class="text-center">Eliminar</th>
             </tr>
             <tr class="table-secondary"
@@ -172,6 +166,19 @@
                 <small><span>{{registro.nomplantilla}} </span> </small>
               </td>
               <td>
+                <select name="lote" class='form-control form-control-sm'
+                (change)="setLote($event.target.value, id)">
+                  <option *ngFor="let detalleprod of registro.detallelote" [ngValue]='detalleprod'
+                  value="{{ detalleprod.fechavto }}/{{ detalleprod.lote }}">
+                    {{ detalleprod.lote }}
+                  </option>
+                </select>
+              </td>
+              <td>
+                <input type="text" class="form-control form-control-sm text-right" 
+                value="{{ registro.fechavto | date:'dd/MM/yyyy' }}" disabled>
+              </td>              
+              <td>
                 <small><span><button type="button" id="btnElinaRegistro" class="btn btn-info btn-danger btn-sm ml-2"
                     (click)="ConfirmaEliminaProductoDeLaGrilla(registro,id)" [disabled]= "desactivabtnelim">Eliminar
                   </button></span>
@@ -182,7 +189,7 @@
         </div>
         <div class="row m-1">
           <pagination [boundaryLinks]="true" [directionLinks]="true" [maxSize]="8"
-            [totalItems]="arregloDetalleProductoSolicitud.length" [itemsPerPage]=50 [previousText]="'Anterior'"
+            [totalItems]="arregloDetalleProductoSolicitud.length" [itemsPerPage]=20 [previousText]="'Anterior'"
             [nextText]="'Siguiente'" [firstText]="'&laquo;'" [lastText]="'&raquo;'"
             (pageChanged)="pageChanged($event)">
           </pagination>
@@ -194,12 +201,12 @@
     <div class="row float-right mr-1 mt-2">
       <!--Al agregarle col-md-3 queda el espacio entre botones cuando aparece generar solicitud-->
       <div class="form-group  align-self-end">  <!--*ngIf="modelopermisos.btngrabadespachocostoser">-->
-        <button type="button" id="btnguardar" [disabled]="!activabtncreasolic" class="btn mr-1 btn-primary btn-sm button-my-styles-busqueda_02"
+        <button type="button" id="btnguardar" [disabled]="!ActivaBotonCrearSolicitud()" class="btn mr-1 btn-primary btn-sm button-my-styles-busqueda_02"
           (click)="ConfirmaGenerarSolicitud()">GENERAR AUTOPEDIDO
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <!-- <div class="form-group  align-self-end"> <!--*ngIf="modelopermisos.btnmodificadespcostoser">->
+      <!-- <div class="form-group  align-self-end"> *ngIf="modelopermisos.btnmodificadespcostoser">->
         <button type="button" id="btnmodificar" [disabled]="!existesolicitud"
           class="btn mr-1 btn-primary btn-sm button-my-styles-busqueda_02"
           (click)="ConfirmaModificarSolicitud()">MODIFICAR SOLICITUD
