--- a/src/app/views/despachosolicitudes/despachosolicitudes.component.html
+++ b/src/app/views/despachosolicitudes/despachosolicitudes.component.html
@@ -55,10 +55,10 @@
     </form>
 
     
-    <div class="card border-primary mt-0" style="padding: 5px;height: 1200px;">
+    <div class="card border-primary mt-0" style="padding: 5px;height: 990px;">
         <tabset>
             <tab heading="Detalle Original" id="tab1">
-                <div class="table-responsive mt-3" style="height: 1090px;">
+                <div class="table-responsive mt-3" style="height: 880px;">
                     <table class="table table-sm  table-primary table-bordered">
                         <tr class="table-sm">
                             <th class="text-center">Código</th>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="row m-1">
                     <pagination [boundaryLinks]="true" [directionLinks]="true" [maxSize]="8"
-                        [totalItems]="listaDetalleSolicitud.length" [itemsPerPage]=50 [previousText]="'Anterior'"
+                        [totalItems]="listaDetalleSolicitud.length" [itemsPerPage]=20 [previousText]="'Anterior'"
                         [nextText]="'Siguiente'" [firstText]="'&laquo;'" [lastText]="'&raquo;'"
                         (pageChanged)="pageChanged($event)">
                     </pagination>
@@ -135,11 +135,11 @@
                                 (blur)="valida_cantidad(FormDespachoSolicitud2.value.cantidad,FormDespachoSolicitud2.value)"
                                 formControlName="cantidad">
                             </div>
-                            <div class="form-group col-md-2" *ngIf="!validacombolote">
+                            <!-- <div class="form-group col-md-2" *ngIf="!validacombolote">
                                 <label for="lote">Lote *</label>
                                 <input type="text" class="form-control form-control-sm" formControlName="lote">
-                            </div>
-                            <div class="form-group col-md-2" *ngIf="validacombolote">
+                            </div> *ngIf="validacombolote"-->
+                            <div class="form-group col-md-2" >
                                 <label for="lote">Lote *</label>
                                 <select name="lote" class='form-control form-control-sm' formControlName='lote'
                                 (change)="LlamaFecha(FormDespachoSolicitud2.value.lote)">
@@ -164,7 +164,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="table-responsive mt-1" style="height: 1020px;">
+                <div class="table-responsive mt-1" style="height: 815px;">
                     <table class="table table-sm  table-primary table-bordered">
                         <tr class="table-sm">
                             <th class="text-center">Código</th>
@@ -230,7 +230,7 @@
                 </div>
                 <div class="row m-1">
                     <pagination [boundaryLinks]="true" [directionLinks]="true" [maxSize]="8"
-                        [totalItems]="listaDetalleDespacho.length" [itemsPerPage]=50 [previousText]="'Anterior'"
+                        [totalItems]="listaDetalleDespacho.length" [itemsPerPage]=20 [previousText]="'Anterior'"
                         [nextText]="'Siguiente'" [firstText]="'&laquo;'" [lastText]="'&raquo;'"
                         (pageChanged)="pageChangedDespacho($event)">
                     </pagination>
