--- a/src/app/views/solicitudes-manuales/solicitudes-manuales.component.html
+++ b/src/app/views/solicitudes-manuales/solicitudes-manuales.component.html
@@ -82,7 +82,7 @@
 
       </div>
     </form>
-    <div class="card border-primary" style="padding: 5px;margin-top: 10px;height: 1200px;">
+    <div class="card border-primary" style="padding: 5px;margin-top: 10px;height: 980px;">
       <div id="table" class="table-editable">
         <a class="btn-floating btn-lg purple-gradient"></a>
         <button type="button" class="btn btn-info btn-rounded btn-sm ml-2" 
@@ -94,7 +94,7 @@
           [disabled]="!activabtnlimpiagrill" 
           (click)="limpiarGrilla()">Limpiar grilla<i class="fas fa-brush ml-1"></i>
         </button>
-        <div  class="table-responsive mt-2" style="height: 1100px;">
+        <div  class="table-responsive mt-2" style="height: 880px;">
           <table class="table table-sm table-condensed table-bordered  table-striped text-center">
             <tr class="table table-sm  table-primary table-bordered ">
               <th class="text-center">Código</th>
@@ -147,7 +147,7 @@
               </td>
               <td>
                 <small><span><button type="button" id="btnElinaRegistro" class="btn btn-info btn-danger btn-sm ml-2"
-                    (click)="ConfirmaEliminaProductoDeLaGrilla(registro,id)" [disabled]="!existesolicitud">Eliminar
+                    (click)="ConfirmaEliminaProductoDeLaGrilla(registro,id)" [disabled]="!activabtneliminargrilla">Eliminar
                   </button></span>
                 </small>
               </td>
@@ -162,7 +162,7 @@
         </div>
         <div class="row m-1">
           <pagination [boundaryLinks]="true" [directionLinks]="true" [maxSize]="8"
-            [totalItems]="arregloDetalleProductoSolicitud.length" [itemsPerPage]=50 [previousText]="'Anterior'"
+            [totalItems]="arregloDetalleProductoSolicitud.length" [itemsPerPage]=20 [previousText]="'Anterior'"
             [nextText]="'Siguiente'" [firstText]="'&laquo;'" [lastText]="'&raquo;'"
             (pageChanged)="pageChanged($event)">
           </pagination>
